--- a/mai.css
+++ b/mai.css
@@ -134,12 +134,18 @@ body.rtl {
     font-weight: 600;
     color: var(--primary-purple);
     font-family: 'InkBrushArabic', 'Poppins', sans-serif;
+    position: relative;
+    height: 50px;
+    z-index: 1001;
 }
 
 .logo-img {
-    height: 40px;
+    height: 100px;
+    margin-top: 10px;
     width: auto;
     object-fit: contain;
+    position: relative;
+    top: 10px;
 }
 
 .logo i {
